/**
 * Copyright IBM Corp. 2016, 2018
 *
 * This source code is licensed under the Apache-2.0 license found in the
 * LICENSE file in the root directory of this source tree.
 */

import React from 'react';
import { mount } from 'enzyme';
import ListBox from '../';

describe('ListBoxField', () => {
  it('should render', () => {
    const wrapper = mount(
      <ListBox.Field id="test-listbox">
        <ListBox.Selection clearSelection={jest.fn()} />
      </ListBox.Field>
    );
    expect(wrapper).toMatchSnapshot();
  });

  it('should be focusable via custom tabindex value', () => {
    const wrapper = mount(
      <ListBox.Field tabIndex="0" id="test-listbox">
        <ListBox.Selection clearSelection={jest.fn()} />
      </ListBox.Field>
    );
    expect(wrapper.children().prop('tabIndex')).toBe('0');
  });

  it('should not be focusable when ListBox is `disabled`', () => {
    const wrapper = mount(<ListBox.Field id="test-listbox" disabled />);
    expect(wrapper.children().prop('tabIndex')).toBe(-1);
  });

  it('should set `aria-owns` based when expanded', () => {
    const wrapper = mount(
      <ListBox.Field id="test-listbox" aria-expanded>
        <ListBox.Selection clearSelection={jest.fn()} />
      </ListBox.Field>
    );
    expect(wrapper.find('div[aria-expanded]').props()['aria-owns']).toBe(
      'test-listbox__menu'
    );
    expect(wrapper.find('div[aria-expanded]').props()['aria-controls']).toBe(
      'test-listbox__menu'
    );
    expect(wrapper).toMatchSnapshot();
  });
});
